--- a/.gitconfig
+++ b/.gitconfig
@@ -12,4 +12,9 @@
 	name = Grzes Furga
 	email = grzesiof@gmail.com
 [merge]
-	tool = meld
+    tool = meld
+
+[alias]
+    l = !"git --no-pager log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative"
+
+
